src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_doubles_class.py.snap
---
source: src/flake8_quotes/mod.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 27
  fix: ~
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 5
    column: 22
  end_location:
    row: 5
    column: 43
  fix: ~
  parent: ~

