src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_doubles_function.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 26
  fix:
    content: "''' not a docstring'''"
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 26
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 11
    column: 4
  end_location:
    row: 11
    column: 26
  fix:
    content: "''' not a docstring'''"
    location:
      row: 11
      column: 4
    end_location:
      row: 11
      column: 26
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 15
    column: 38
  end_location:
    row: 17
    column: 3
  fix:
    content: "'''\n    not a\n'''"
    location:
      row: 15
      column: 38
    end_location:
      row: 17
      column: 3
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 19
  fix:
    content: "'''docstring'''"
    location:
      row: 17
      column: 4
    end_location:
      row: 17
      column: 19
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 22
    column: 4
  end_location:
    row: 22
    column: 27
  fix:
    content: "''' not a docstring '''"
    location:
      row: 22
      column: 4
    end_location:
      row: 22
      column: 27
  parent: ~

