src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_doubles_module_singleline.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix:
    content: "''' this is not a docstring '''"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 31
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 31
  fix:
    content: "''' this is not a docstring '''"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 31
  parent: ~

