src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_singles.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content: "\"\"\"\nSingle quotes multiline module docstring\n\"\"\""
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 14
    column: 4
  end_location:
    row: 16
    column: 7
  fix:
    content: "\"\"\"\n    Single quotes multiline class docstring\n    \"\"\""
    location:
      row: 14
      column: 4
    end_location:
      row: 16
      column: 7
  parent: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 26
    column: 8
  end_location:
    row: 28
    column: 11
  fix:
    content: "\"\"\"\n        Single quotes multiline function docstring\n        \"\"\""
    location:
      row: 26
      column: 8
    end_location:
      row: 28
      column: 11
  parent: ~

