src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_singles_function.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 56
  fix:
    content: "\"\"\"function without params, single line docstring\"\"\""
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 56
  parent: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 8
    column: 4
  end_location:
    row: 10
    column: 7
  fix:
    content: "\"\"\"\n        function without params, multiline docstring\n    \"\"\""
    location:
      row: 8
      column: 4
    end_location:
      row: 10
      column: 7
  parent: ~
- kind:
    BadQuotesDocstring: double
  location:
    row: 27
    column: 4
  end_location:
    row: 27
    column: 27
  fix:
    content: "\"Single line docstring\""
    location:
      row: 27
      column: 4
    end_location:
      row: 27
      column: 27
  parent: ~

