src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_singles_module_multiline.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content: "\"\"\"\nDouble quotes multiline module docstring\n\"\"\""
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~

