src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__doubles_doubles.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesInlineString: single
  location:
    row: 1
    column: 24
  end_location:
    row: 1
    column: 45
  fix:
    content: "'double quote string'"
    location:
      row: 1
      column: 24
    end_location:
      row: 1
      column: 45
  parent: ~
- kind:
    BadQuotesInlineString: single
  location:
    row: 2
    column: 24
  end_location:
    row: 2
    column: 46
  fix:
    content: "u'double quote string'"
    location:
      row: 2
      column: 24
    end_location:
      row: 2
      column: 46
  parent: ~

