src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__doubles_doubles_escaped.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    AvoidQuoteEscape: ~
  location:
    row: 1
    column: 25
  end_location:
    row: 1
    column: 47
  fix:
    content: "\"This is a 'string'\""
    location:
      row: 1
      column: 25
    end_location:
      row: 1
      column: 47
  parent: ~
- kind:
    AvoidQuoteEscape: ~
  location:
    row: 2
    column: 25
  end_location:
    row: 2
    column: 52
  fix:
    content: "\"This is \\\\ a \\\\'string'\""
    location:
      row: 2
      column: 25
    end_location:
      row: 2
      column: 52
  parent: ~

